--- a/.env.example
+++ b/.env.example
@@ -39,3 +39,6 @@ OCI_BOOT_VOLUME_SIZE_IN_GBS=
 # Open https://cloud.oracle.com/block-storage/boot-volumes, click non-used and copy it's OCID
 # NB! You must specify OCI_AVAILABILITY_DOMAIN also as they should be located in the same one
 OCI_BOOT_VOLUME_ID=
+
+# Webhook url with message content which shall be called on success. e.g., https://example.com/hook.php?text=OCI+instance+created
+WEBHOOK=
