Webhook for both error and success

--- a/.env.example
+++ b/.env.example
@@ -40,5 +40,6 @@ OCI_BOOT_VOLUME_SIZE_IN_GBS=
 # NB! You must specify OCI_AVAILABILITY_DOMAIN also as they should be located in the same one
 OCI_BOOT_VOLUME_ID=
 
-# Webhook url with message content which shall be called on success. e.g., https://example.com/hook.php?text=OCI+instance+created
-WEBHOOK=
+# Optional. Webhook urls with a {MESSAGE} placeholder, which will be replaced by actual success or error message. e.g., https://example.com/hook.php?text={MESSAGE}
+WEBHOOK_SUCCESS=
+WEBHOOK_ERROR=
